  run when starting up; it sets up several things that previously needed
  to be done separately.
  (Martin Pool, #507710)

* Remove unused ``CommandFailed`` exception.
  (Martin Pool)

Internals
*********

* ``bzrlib.branchbuilder.BranchBuilder.build_snapshot`` now accepts a
  ``message_callback`` in the same way that commit does. (Robert Collins)

* ``bzrlib.commands.run_bzr`` is more extensible: callers can supply the
  functions to load or disable plugins if they wish to use a different
  plugin mechanism; the --help, --version and no-command name code paths
  now use the generic pluggable command lookup infrastructure.
  (Robert Collins)

Testing
*******

* bzr now has a ``.testr.conf`` file in its source tree configured
  appropriately for running tests with Testrepository
  (``https://launchpad.net/testrepository``). (Robert Collins)

* Documentation about testing with ``subunit`` has been tweaked.
  (Robert Collins)

* New ``bzrlib.tests.test_import_tariff`` can make assertions about what
  Python modules are loaded, to guard against startup time or library
  dependency regressions.
  (Martin Pool)

* Stop sending apport crash files to ``.cache`` in the directory from
  which ``bzr selftest`` was run.  (Martin Pool, #422350)

bzr 2.1.1
#########

:2.1.1: not released yet

Bug Fixes
*********

* Register SIGWINCH handler only when creating a ``TextUIFactory``; avoids
  problems importing bzrlib from a non-main thread.
  (Elliot Murphy, #521989)

* Standardize the error handling when creating a new ``StaticTuple``
  (problems will raise TypeError). (Matt Nordhoff, #457979)

* Merge correctly when this_tree is not a WorkingTree.  (Aaron Bentley)

Documentation
*************

* Added What's New in Bazaar 2.1 document. (Ian Clatworthy)

bzr 2.1.0
#########

:Codename: Strasbourg
:2.1.0: 2010-02-11

This release marks our second long-term-stable series. The Bazaar team
has decided that we will continue to make bugfix-only 2.0.x and 2.1.x